--- a/boards/shields/archaeoptereeks/archaeoptereeks.zmk.yml
+++ b/boards/shields/archaeoptereeks/archaeoptereeks.zmk.yml
@@ -1,6 +1,6 @@
 file_format: "1"
 id: archaeoptereeks
-name: archaeoptereeks
+name: Archaeoptereeks
 type: shield
 url: https://github.com/Klackygears/
 requires: [nice_nano]
