--- a/boards/shields/archaeoptereeks/archaeoptereeks.conf
+++ b/boards/shields/archaeoptereeks/archaeoptereeks.conf
@@ -1,4 +1,4 @@
-CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW=n
 # Use the STRIP config specific to the LEDs you're using
-CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_WS2812_STRIP=n
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
