--- a/boards/shields/archaeoptereeks/archaeoptereeks.conf
+++ b/boards/shields/archaeoptereeks/archaeoptereeks.conf
@@ -1,3 +1,4 @@
 # CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 # Use the STRIP config specific to the LEDs you're using
+CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
