--- a/boards/shields/archaeoptereeks/archaeoptereeks.conf
+++ b/boards/shields/archaeoptereeks/archaeoptereeks.conf
@@ -5,3 +5,5 @@ CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MIN=2
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=40
+
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
